# RowPack

./: CMakeLists.txt  LICENSE  README.md  __init__.py  audio.py  authoring.py  convert_jsonl.py  convert_jsonl_parallel.py  convert_parquet.py  dataset.py  format.py  io.py  make_list.py  native.py  ros2_capture.py  search_index.py  torch_dataset.py  video.py
benchmarks/: __init__.py  benchmark_books_jsonl_conversion.py  benchmark_webcam_storage.py
docs/: build-details.md
examples/: _summary.py  capture_config.json  cpp_writer_smoke.cpp  create_audio_rowpack.py  create_avif_chunks.py  create_rowpack_direct.py  create_webcam_rowpack.py  quick_benchmark.py  read_rowpack.py  sample_books.jsonl
include/rowpack/: image_codecs.hpp  rowpack.hpp
rowpack/: __init__.py
src/: rowpack_nanobind.cpp
tests/: python_smoke.py
tools/rowpack_audio_tool/: Cargo.toml
tools/rowpack_audio_tool/src/: main.rs
