cmake_minimum_required(VERSION 3.18)
project(rowpack LANGUAGES C CXX)

option(ROWPACK_BUILD_PYTHON "Build the rowpack_native nanobind module" ON)
option(ROWPACK_BUILD_EXAMPLES "Build RowPack C++ examples" ON)
option(ROWPACK_ENABLE_LIBAVIF "Build native AVIF sequence encoding through libavif" OFF)
set(ROWPACK_NANOBIND_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/nanobind" CACHE PATH "Path to a nanobind checkout")
set(ROWPACK_CISTA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/cista/include" CACHE PATH "Optional path to cista/include")
set(ROWPACK_QOI_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/qoi" CACHE PATH "Optional path to qoi.h")
set(ROWPACK_STB_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/stb" CACHE PATH "Optional path to stb_image.h/stb_image_write.h")
set(ROWPACK_LZAV_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/lzav" CACHE PATH "Optional path to lzav.h")
set(ROWPACK_LIBAVIF_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/libavif" CACHE PATH "Optional bundled libavif source checkout")
set(ROWPACK_LIBAVIF_TARGET "" CACHE STRING "Optional existing CMake target to link for libavif")

include(CTest)

add_library(rowpack_headers INTERFACE)
target_include_directories(rowpack_headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(rowpack_headers INTERFACE cxx_std_20)

if(ROWPACK_CISTA_INCLUDE_DIR)
  target_compile_definitions(rowpack_headers INTERFACE ROWPACK_USE_CISTA)
  target_include_directories(rowpack_headers INTERFACE ${ROWPACK_CISTA_INCLUDE_DIR})
endif()

if(ROWPACK_QOI_INCLUDE_DIR)
  target_compile_definitions(rowpack_headers INTERFACE ROWPACK_USE_QOI)
  target_include_directories(rowpack_headers INTERFACE ${ROWPACK_QOI_INCLUDE_DIR})
endif()

if(ROWPACK_STB_INCLUDE_DIR)
  target_compile_definitions(rowpack_headers INTERFACE ROWPACK_USE_STB)
  target_include_directories(rowpack_headers INTERFACE ${ROWPACK_STB_INCLUDE_DIR})
endif()

if(ROWPACK_LZAV_INCLUDE_DIR)
  target_compile_definitions(rowpack_headers INTERFACE ROWPACK_USE_LZAV)
  target_include_directories(rowpack_headers INTERFACE ${ROWPACK_LZAV_INCLUDE_DIR})
endif()

set(ROWPACK_HAVE_LIBAVIF OFF)
if(ROWPACK_ENABLE_LIBAVIF)
  if(ROWPACK_LIBAVIF_TARGET)
    set(ROWPACK_HAVE_LIBAVIF ON)
  elseif(EXISTS "${ROWPACK_LIBAVIF_DIR}/CMakeLists.txt")
    if(NOT DEFINED AVIF_BUILD_APPS)
      set(AVIF_BUILD_APPS OFF CACHE BOOL "Build libavif apps")
    endif()
    if(NOT DEFINED AVIF_BUILD_TESTS)
      set(AVIF_BUILD_TESTS OFF CACHE BOOL "Build libavif tests")
    endif()
    if(NOT DEFINED AVIF_BUILD_EXAMPLES)
      set(AVIF_BUILD_EXAMPLES OFF CACHE BOOL "Build libavif examples")
    endif()
    if(NOT DEFINED AVIF_ENABLE_WERROR)
      set(AVIF_ENABLE_WERROR OFF CACHE BOOL "Treat libavif warnings as errors")
    endif()
    if(NOT DEFINED BUILD_SHARED_LIBS)
      set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build vendored third-party dependencies as static libraries")
    endif()
    if(NOT DEFINED AVIF_CODEC_AOM AND NOT DEFINED AVIF_CODEC_RAV1E AND NOT DEFINED AVIF_CODEC_SVT AND NOT DEFINED AVIF_CODEC_AVM AND NOT DEFINED AVIF_CODEC_DAV1D AND NOT DEFINED AVIF_CODEC_LIBGAV1)
      set(AVIF_CODEC_AOM OFF CACHE STRING "Do not use AOM by default for RowPack libavif builds")
      set(AVIF_CODEC_RAV1E LOCAL CACHE STRING "Use rav1e for RowPack AVIF encoding")
      set(AVIF_CODEC_DAV1D LOCAL CACHE STRING "Use dav1d for RowPack AVIF decoding")
    endif()
    if(NOT DEFINED AVIF_LIBYUV)
      set(AVIF_LIBYUV OFF CACHE STRING "Use libyuv for libavif color conversion")
    endif()
    add_subdirectory("${ROWPACK_LIBAVIF_DIR}" libavif EXCLUDE_FROM_ALL)
    set(ROWPACK_LIBAVIF_TARGET avif)
    set(ROWPACK_HAVE_LIBAVIF ON)
  else()
    find_package(libavif CONFIG QUIET)
    if(TARGET avif)
      set(ROWPACK_LIBAVIF_TARGET avif)
      set(ROWPACK_HAVE_LIBAVIF ON)
    elseif(TARGET libavif::avif)
      set(ROWPACK_LIBAVIF_TARGET libavif::avif)
      set(ROWPACK_HAVE_LIBAVIF ON)
    endif()
  endif()

  if(NOT ROWPACK_HAVE_LIBAVIF)
    message(WARNING "ROWPACK_ENABLE_LIBAVIF is ON, but no libavif target was found")
  endif()
endif()

if(ROWPACK_BUILD_PYTHON)
  set(Python_FIND_VIRTUALENV FIRST)
  set(Python_FIND_STRATEGY LOCATION)
  set(Python_FIND_UNVERSIONED_NAMES FIRST)
  set(Python_FIND_REGISTRY LAST)
  set(Python_FIND_FRAMEWORK LAST)
  find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED)

  if(ROWPACK_NANOBIND_DIR)
    add_subdirectory(${ROWPACK_NANOBIND_DIR} nanobind)
  else()
    find_package(nanobind CONFIG REQUIRED)
  endif()

  nanobind_add_module(rowpack_native src/rowpack_nanobind.cpp)
  target_link_libraries(rowpack_native PRIVATE rowpack_headers)
  if(ROWPACK_HAVE_LIBAVIF)
    target_compile_definitions(rowpack_native PRIVATE ROWPACK_USE_LIBAVIF)
    target_link_libraries(rowpack_native PRIVATE ${ROWPACK_LIBAVIF_TARGET})
  endif()
endif()

if(ROWPACK_BUILD_EXAMPLES)
  add_executable(rowpack_cpp_writer_smoke examples/cpp_writer_smoke.cpp)
  target_link_libraries(rowpack_cpp_writer_smoke PRIVATE rowpack_headers)

  if(BUILD_TESTING)
    add_test(NAME rowpack_cpp_writer_smoke COMMAND rowpack_cpp_writer_smoke)
    set_tests_properties(rowpack_cpp_writer_smoke PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
  endif()
endif()

if(BUILD_TESTING AND ROWPACK_BUILD_PYTHON)
  get_filename_component(ROWPACK_SOURCE_PARENT "${CMAKE_CURRENT_SOURCE_DIR}" DIRECTORY)
  set(ROWPACK_PYTHON_TEST_ENV
      "PYTHONPATH=${ROWPACK_SOURCE_PARENT}"
      "ROWPACK_NATIVE_DIR=$<TARGET_FILE_DIR:rowpack_native>")

  add_test(
      NAME rowpack_python_smoke
      COMMAND ${Python_EXECUTABLE}
              ${CMAKE_CURRENT_SOURCE_DIR}/tests/python_smoke.py
              --output-dir ${CMAKE_CURRENT_BINARY_DIR}/test_output
              --native-module-dir $<TARGET_FILE_DIR:rowpack_native>)
  set_tests_properties(rowpack_python_smoke PROPERTIES ENVIRONMENT "${ROWPACK_PYTHON_TEST_ENV}")

  add_test(NAME rowpack_ros2_module_help COMMAND ${Python_EXECUTABLE} -m rowpack.ros2_capture --help)
  set_tests_properties(rowpack_ros2_module_help PROPERTIES ENVIRONMENT "${ROWPACK_PYTHON_TEST_ENV}")
endif()
